# WritingTools

./: WritingToolApp.py  main.py  pyproject.toml  requirements.txt
src/: WritingToolApp.py
src/ui/: OnboardingWindow.py  SettingsWindow.py
