[project]
name = "WritingTools"
version = "0.3.0"
description = "A better version of Apple Intelligence Writing Tools for Windows and Linux."
authors = [
    { name = "Jesai Tarun", email = "jesaitarun@gmail.com" }
]

dependencies = [
"darkdetect",
"google-generativeai",
"openai",
"pyperclip",
"PySide6",
"protobuf",
"pynput",
"keyboard",
"pywin32; platform_system=='Windows'",
]
